--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,3 @@
-inherit_from: .rails-rubocop.yml
+inherit_from:
+  - https://raw.githubusercontent.com/workarea-commerce/workarea/master/.rubocop.yml
 
-AllCops:
-  Exclude:
-    - 'Rakefile'
-    - 'test/dummy/**/*'
-    - 'lib/badges.rb'
-    - 'lib/badges/**/*'
